[package]
name = "tracer"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Müller <deso@posteo.net>"]
license = "LGPL-2.1-only OR BSD-2-Clause"

[build-dependencies]
libbpf-cargo = "0.25"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "991dd4b8dfd8c9d62ce8999521b24f61d9b7fc52" }

[dependencies]
libbpf-rs = "0.25"
libc = "0.2"
plain = "0.2"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
ctrlc = "3.4"

