[package]
name = "tracer"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1-only OR BSD-2-Clause"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
libbpf-rs = "0.26"
libc = "0.2"
plain = "0.2"

[build-dependencies]
scx_cargo = { git = "https://github.com/sched-ext/scx", branch = "main" }
